[gd_scene load_steps=5 format=3 uid="uid://cfevgv38d1bll"]

[ext_resource type="PackedScene" uid="uid://y7s1081jj0hp" path="res://addons/inventory-system/editor/base/inventory_tab_editor.tscn" id="1_7csdk"]
[ext_resource type="Script" path="res://addons/inventory-system/editor/categories/categories_editor.gd" id="2_eyvx1"]
[ext_resource type="Script" path="res://addons/inventory-system/editor/items/inventory_item_list.gd" id="3_xhxmq"]
[ext_resource type="PackedScene" uid="uid://dqcgncj4oicwn" path="res://addons/inventory-system/editor/categories/item_category_editor.tscn" id="4_0s65b"]

[node name="Categories" instance=ExtResource("1_7csdk")]
script = ExtResource("2_eyvx1")

[node name="ItemCategoriesItemList" type="VBoxContainer" parent="HSplitContainer" index="0"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
script = ExtResource("3_xhxmq")

[node name="ItemCategoryEditor" parent="HSplitContainer" index="1" instance=ExtResource("4_0s65b")]
layout_mode = 2

[node name="ItemCategoryPopupMenu" type="PopupMenu" parent="." index="1"]
size = Vector2i(28, 8)

[connection signal="item_popup_menu_requested" from="HSplitContainer/ItemCategoriesItemList" to="." method="_on_item_categories_item_list_item_popup_menu_requested"]
[connection signal="item_selected" from="HSplitContainer/ItemCategoriesItemList" to="." method="_on_item_categories_item_list_item_selected"]
[connection signal="changed" from="HSplitContainer/ItemCategoryEditor" to="." method="_on_item_category_editor_changed"]
[connection signal="id_pressed" from="ItemCategoryPopupMenu" to="." method="_on_item_category_popup_menu_id_pressed"]
